[gd_scene load_steps=22 format=3 uid="uid://ckfowd3y3lkdf"]

[ext_resource type="Script" path="res://Player/Human/dash_coldown.gd" id="1_jir8f"]
[ext_resource type="Texture2D" uid="uid://b4lrh2j7v1g3e" path="res://UX/Interface/Assets/Charge/UI_Flat_Slot_01_Unavailable.png" id="2_47puo"]
[ext_resource type="PackedScene" uid="uid://bjwog7uwny2cp" path="res://tutorial.tscn" id="2_bjav1"]
[ext_resource type="Texture2D" uid="uid://brptfd35n213c" path="res://Player/Human/UI_Flat_Select_01a1.png" id="2_m1lve"]
[ext_resource type="Texture2D" uid="uid://dgmlr245vd0um" path="res://UX/Interface/Assets/Charge/1charhe.png" id="3_cpfq8"]
[ext_resource type="Texture2D" uid="uid://kkiufdkksk1q" path="res://UX/Interface/Assets/Charge/2charge.png" id="4_gfp2o"]
[ext_resource type="Texture2D" uid="uid://coifldrv7fvo0" path="res://Player/Human/UI_Flat_Frame_01_Standard.png" id="4_o23f1"]
[ext_resource type="Texture2D" uid="uid://dlm036s674nrh" path="res://UX/Interface/Assets/Charge/UI_Flat_Slot_01_Selected.png" id="5_icsv8"]
[ext_resource type="Texture2D" uid="uid://c1d845x1v45xm" path="res://UX/Interface/Assets/Charge/UI_Flat_Slot_01_Available.png" id="6_g6dj5"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/dialogueBox.gd" id="15_wprb8"]
[ext_resource type="Resource" uid="uid://357kpahjo0db" path="res://Dialoges/Computer.tres" id="16_f7kst"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="17_jubmg"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="18_nxj0u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ynocm"]
atlas = ExtResource("2_47puo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5ppl"]
atlas = ExtResource("3_cpfq8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vdud"]
atlas = ExtResource("4_gfp2o")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qev7k"]
atlas = ExtResource("5_icsv8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlp6h"]
atlas = ExtResource("6_g6dj5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_b66qs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynocm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5ppl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vdud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qev7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlp6h")
}],
"loop": false,
"name": &"Animate",
"speed": 10.0
}]

[sub_resource type="RichTextEffect" id="RichTextEffect_agbgg"]
script = ExtResource("17_jubmg")

[sub_resource type="RichTextEffect" id="RichTextEffect_mbgky"]
script = ExtResource("18_nxj0u")

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 54.0
offset_top = 27.0
offset_right = -776.0
offset_bottom = -478.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("1_jir8f")

[node name="Tutorial" parent="." instance=ExtResource("2_bjav1")]
offset_left = 305.0
offset_top = 523.0
offset_right = 599.0
offset_bottom = 674.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InColdown" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(87, 667)
scale = Vector2(0.8125, 0.801948)
sprite_frames = SubResource("SpriteFrames_b66qs")
animation = &"Animate"
frame = 4
frame_progress = 1.0

[node name="OutColdown" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(86.504, 667.678)
scale = Vector2(0.468834, 0.446715)
texture = ExtResource("4_o23f1")

[node name="UiFlatSelect01a1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(87, 667)
scale = Vector2(1.52344, 1.51432)
texture = ExtResource("2_m1lve")

[node name="Comp" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(256, 128)
layout_mode = 0
offset_left = 377.0
offset_top = 139.0
offset_right = 633.0
offset_bottom = 267.0
script = ExtResource("15_wprb8")
dialogue_file = ExtResource("16_f7kst")
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_agbgg"), SubResource("RichTextEffect_mbgky")])

[connection signal="dialogue_signal" from="Comp" to="." method="_on_comp_dialogue_signal"]
